@@ -72,3 +72,4 @@ pip install soap
 pip install html-json-forms
 pip install djangorestframework-simplejwt
 pip install django-filter
+ pip install djangorestframework-link-header-pagination
